--- a/.github/workflows/docker-image.yaml
+++ b/.github/workflows/docker-image.yaml
@@ -25,7 +25,7 @@ jobs:
         uses: docker/metadata-action@v3
         with:
           images: |
-            ghcr.io/xaocon/image-network-debug
+            ghcr.io/${{ github.repository }}
           labels: |
             org.opencontainers.image.description="For debugging in k8s"
             org.opencontainers.image.licenses=MIT
