--- a/starship.toml
+++ b/starship.toml
@@ -5,17 +5,5 @@ disabled = false
 [gcloud]
 disabled = false
 format = '[$symbol$project $account $region]($style) '
-#[aws]
-#disabled = true
-
-#[python]
-#disabled = true
-[custom]
-
-[custom.tab]
-description = "The current tab in the tab terminal multiplexer"
-command = "tab --starship"
-when = "tab --starship"
-shell = ["sh"]
-format = "[$output]($style) "
-style = "bold blue"
+[aws]
+disabled = true
