--- a/.github/workflows/docker-image.yaml
+++ b/.github/workflows/docker-image.yaml
@@ -38,7 +38,7 @@ jobs:
           type=semver,pattern={{major}}
           type=sha
     - name: Set up QEMU
-      uses: docker/setup-qemu-action@v2
+      uses: docker/setup-qemu-action@v3
     - name: Set up Docker Buildx
       id: buildx
       uses: docker/setup-buildx-action@v3
@@ -56,5 +56,5 @@ jobs:
         pull: ${{ github.event_name == 'schedule' }}
         tags: ${{ steps.meta.outputs.tags }}
         labels: ${{ steps.meta.outputs.labels }}
-        cache-from: type=gha .
+        # cache-from: type=gha .
         cache-to: type=gha,mode=min
