no more docker caching in actions

--- a/.github/workflows/docker-image.yaml
+++ b/.github/workflows/docker-image.yaml
@@ -57,4 +57,4 @@ jobs:
         tags: ${{ steps.meta.outputs.tags }}
         labels: ${{ steps.meta.outputs.labels }}
         # cache-from: type=registry,ref=ghcr.io/xaocon/image-network-debug:buildcache
-        cache-to: type=registry,ref=ghcr.io/xaocon/image-network-debug:buildcache,mode=max
+        # cache-to: type=registry,ref=ghcr.io/xaocon/image-network-debug:buildcache,mode=max
