--- a/.github/workflows/docker-image.yaml
+++ b/.github/workflows/docker-image.yaml
@@ -57,4 +57,6 @@ jobs:
         tags: ${{ steps.meta.outputs.tags }}
         labels: ${{ steps.meta.outputs.labels }}
         # cache-from: type=registry,ref=ghcr.io/xaocon/image-network-debug:latest
-        cache-to: type=inline
+        # cache-to: type=inline
+        cache-from: type=gha .
+        cache-to: type=gha,mode=min
